WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
66496
[GTK] textInputController.doCommand is not implemented
https://bugs.webkit.org/show_bug.cgi?id=66496
Summary
[GTK] textInputController.doCommand is not implemented
Ryosuke Niwa
Reported
2011-08-18 13:48:19 PDT
textInputController hasn't been implemented on GTK's DRT yet.
Attachments
Patch
(6.90 KB, patch)
2011-09-28 04:58 PDT
,
Kaustubh Atrawalkar
cshu
: review+
Details
Formatted Diff
Diff
Updated Patch
(6.82 KB, patch)
2011-09-28 09:33 PDT
,
Kaustubh Atrawalkar
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2011-08-18 13:50:10 PDT
Due to this bug, the tests added by
http://trac.webkit.org/changeset/93291
are failing. I'll add them to the skipped list for now.
Kaustubh Atrawalkar
Comment 2
2011-09-28 04:58:03 PDT
Created
attachment 109003
[details]
Patch Implementation for textInputController.doCommand
Kaustubh Atrawalkar
Comment 3
2011-09-28 05:38:34 PDT
Currently all the command from WebCore/editing/EditorCommand.cpp -> CommandMap entries (
http://www.google.com/codesearch#OAMlx_jo-ck/src/third_party/WebKit/Source/WebCore/editing/EditorCommand.cpp&type=cs&l=1407
) are supported.
Chang Shu
Comment 4
2011-09-28 06:23:50 PDT
Comment on
attachment 109003
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=109003&action=review
Actually, I plan to modify the password echo tests to use eventSender, if possible, instead of textInputController.doCommand so they can be widely accepted. But it's nice to have this supported on GTK anyway. thanks.
> Source/WebKit/gtk/WebCoreSupport/DumpRenderTreeSupportGtk.cpp:601 > + return;
this return can be removed.
> LayoutTests/ChangeLog:3 > + Removed skipped tests under textInputController.doCommand for Gtk Port.
I usually still put the title here and some brief comments below.
> LayoutTests/platform/gtk/Skipped:-1548 > -
It's surprising but true that doCommand is used only in the above tests and some mac-specific tests. :)
Kaustubh Atrawalkar
Comment 5
2011-09-28 09:33:46 PDT
Created
attachment 109029
[details]
Updated Patch Updated patch with Chang Shu's comments.
Kaustubh Atrawalkar
Comment 6
2011-09-28 09:35:08 PDT
> Actually, I plan to modify the password echo tests to use eventSender, if possible, instead of textInputController.doCommand so they can be widely accepted. But it's nice to have this supported on GTK anyway. thanks. >
Thanks for that comment :) Glad to implement it.
> > Source/WebKit/gtk/WebCoreSupport/DumpRenderTreeSupportGtk.cpp:601 > > + return; > > this return can be removed. >
Done.
> > LayoutTests/ChangeLog:3 > > + Removed skipped tests under textInputController.doCommand for Gtk Port. > > I usually still put the title here and some brief comments below. >
Updated the changeLog.
Kaustubh Atrawalkar
Comment 7
2011-09-28 09:47:45 PDT
Thanks for the review Martin :)
WebKit Review Bot
Comment 8
2011-09-28 10:39:20 PDT
Comment on
attachment 109029
[details]
Updated Patch Clearing flags on attachment: 109029 Committed
r96234
: <
http://trac.webkit.org/changeset/96234
>
WebKit Review Bot
Comment 9
2011-09-28 10:39:24 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug