[Gtk] Implement textInputController.doCommand https://bugs.webkit.org/show_bug.cgi?id=66496

Patch by Kaustubh Atrawalkar <kaustubh@motorola.com> on 2011-09-28
Reviewed by Martin Robinson.

Source/WebKit/gtk:

* WebCoreSupport/DumpRenderTreeSupportGtk.cpp:
(DumpRenderTreeSupportGtk::doCommand): Function definition for doCommand
callback. Converted Incoming command to match with WebCore::Editor CommandMap.
* WebCoreSupport/DumpRenderTreeSupportGtk.h:

Tools:

* DumpRenderTree/gtk/TextInputController.cpp:
(doCommandCallback): Callback function for textInputController.doCommand

LayoutTests:

Removed skipped tests under textInputController.doCommand for Gtk Port.

* platform/gtk/Skipped:

Canonical link: https://commits.webkit.org/85003@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96234 268f45cc-cd09-0410-ab3c-d52691b4dbfc